[gd_scene load_steps=4 format=2]

[ext_resource path="res://sc/Debug_Display.gd" type="Script" id=1]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://theme1.tres" type="Theme" id=3]

[node name="Debug_Display" type="Control"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1920.0
margin_right = -1920.0
script = ExtResource( 1 )

[node name="MEM_Label2" type="Label" parent="."]
margin_top = 96.0
margin_bottom = 112.0
custom_colors/font_color = Color( 0.905882, 0.596078, 0.156863, 1 )
custom_fonts/font = ExtResource( 2 )
text = "  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS_Label" type="Label" parent="."]
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "ðŸª€"

[node name="OS_Label" type="Label" parent="."]
margin_top = 24.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ðŸª€ðŸª€ðŸª€"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MEM_Label" type="Label" parent="."]
margin_top = 48.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "ðŸª€ðŸª€"
__meta__ = {
"_edit_use_anchors_": false
}
